# 77_wallet_core

./: .gitignore  Cargo.toml  README.md
wallet-chain-instance/: Cargo.toml
wallet-chain-instance/src/: derivation_path.rs  lib.rs
wallet-chain-instance/src/error/: mod.rs
wallet-chain-instance/src/instance/: mod.rs
wallet-chain-instance/src/instance/btc/: address.rs  mod.rs  test.rs
wallet-chain-instance/src/instance/dog/: address.rs  derivation.rs  mod.rs  test.rs
wallet-chain-instance/src/instance/eth/: address.rs
wallet-chain-instance/src/instance/ltc/: address.rs  mod.rs  test.rs
wallet-chain-instance/src/instance/sol/: mod.rs
wallet-chain-instance/src/instance/sui/: address.rs  derivation.rs  mod.rs  test.rs
wallet-chain-instance/src/instance/ton/: mod.rs
wallet-chain-instance/src/instance/trx/: address.rs  mod.rs
wallet-chain-interact/: Cargo.toml
wallet-chain-interact/src/: errors.rs  lib.rs  utils.rs
wallet-chain-interact/src/btc/: chain.rs  consts.rs  mod.rs  provider.rs  script.rs  signature.rs  utxos.rs
wallet-chain-interact/src/btc/operations/: multisig.rs  transfer.rs
wallet-chain-interact/src/dog/: chain.rs  consts.rs  mod.rs  params.rs  provider.rs  script.rs  signature.rs  utxos.rs
wallet-chain-interact/src/dog/operations/: mod.rs  multisig.rs  transfer.rs
wallet-chain-interact/src/dog/protocol/: account.rs  transaction.rs
wallet-chain-interact/src/eth/: chain.rs  mod.rs  params.rs  provider.rs
wallet-chain-interact/src/eth/operations/: erc.rs  mod.rs
wallet-chain-interact/src/eth/operations/multisig/: account.rs
wallet-chain-interact/src/eth/protocol/: contract.rs
wallet-chain-interact/src/ltc/: chain.rs  consts.rs  mod.rs  params.rs  provider.rs  script.rs  signature.rs  utxos.rs
wallet-chain-interact/src/ltc/operations/: multisig.rs  transfer.rs
wallet-chain-interact/src/ltc/protocol/: account.rs  transaction.rs
wallet-chain-interact/src/sol/: chain.rs  consts.rs  params.rs  provider.rs
wallet-chain-interact/src/sol/operations/: transfer.rs
wallet-chain-interact/src/sol/operations/multisig/: account.rs  args.rs  mod.rs  transfer.rs  vault_transaction.rs
wallet-chain-interact/src/sol/protocol/: block.rs  transaction.rs
wallet-chain-interact/src/sui/: builder.rs  chain.rs  consts.rs  error.rs  mod.rs  protocol.rs  provider.rs
wallet-chain-interact/src/sui/operations/: mod.rs  transfer.rs
wallet-chain-interact/src/ton/: address.rs  chain.rs  consts.rs  errors.rs  mod.rs  params.rs  provider.rs
wallet-chain-interact/src/ton/operations/: mod.rs  token_transfer.rs  transfer.rs
wallet-chain-interact/src/ton/protocol/: account.rs  block.rs  common.rs  jettons.rs  mod.rs  transaction.rs
wallet-chain-interact/src/tron/: chain.rs  consts.rs  mod.rs  params.rs  provider.rs  tx_build.rs
wallet-chain-interact/src/tron/operations/: contract.rs  mod.rs  multisig.rs  permisions.rs  permissions.rs  transfer.rs  trc.rs
wallet-chain-interact/src/tron/operations/stake/: delegate.rs  freeze.rs  mod.rs  undelegate.rs  unfreeze.rs  vote.rs
wallet-chain-interact/src/tron/protocol/: account.rs  chain_parameter.rs  mod.rs  transaction.rs
wallet-chain-interact/src/types/: request.rs
wallet-chain-interact/tests_example/bsc/: base.rs  mod.rs  multisig.rs
wallet-chain-interact/tests_example/btc/: address.rs  base.rs  mod.rs  multisig.rs
wallet-chain-interact/tests_example/eth/: base.rs  mod.rs  multisig.rs
wallet-chain-interact/tests_example/sol/: base.rs  mod.rs  multisig.rs
wallet-chain-interact/tests_example/tron/: account.rs  base.rs  mod.rs  multisig.rs  stake.rs
wallet-core/: Cargo.toml
wallet-core/src/: derive.rs  keypair.rs  language.rs  lib.rs  xpriv.rs
wallet-core/src/error/: mod.rs
wallet-crypto/: Cargo.toml
wallet-crypto/src/: lib.rs  utils.rs
wallet-crypto/src/crypto/: argon2id.rs  engine.rs  mod.rs  scrypt_.rs
wallet-crypto/src/error/: wallet.rs
wallet-crypto/src/kdf/: factory.rs  mod.rs  scrypt_.rs
wallet-crypto/src/keystore/: builder.rs  cipher.rs  engine.rs  factory.rs  file.rs  generator.rs  json.rs  mod.rs
wallet-crypto/src/wallet/: phrase.rs  seed.rs
wallet-keystore/: Cargo.toml  tron-TFzMRRzQFhY9XFS37veoswLRuWLNtbyhiB-m%2F44%27%2F195%27%2F0%27%2F0%2F0-pk
wallet-keystore/src/: api.rs  lib.rs  service.rs  utils.rs
wallet-keystore/src/api/: mod.rs
wallet-keystore/src/crypto/: argon2id.rs  cipher.rs  context.rs  io.rs  kdf.rs  keystore.rs  mac.rs  mod.rs  pbkdf2.rs  pipeline.rs  rng.rs  scrypt_.rs
wallet-keystore/src/crypto/kdfs/: argon2id.rs  mod.rs  pbkdf2.rs  scrypt_.rs
wallet-keystore/src/error/: crypto.rs  mod.rs  wallet.rs
wallet-keystore/src/keystore/: builder.rs  cipher.rs  engine.rs  factory.rs  file.rs  json.rs  kdf.rs  mac.rs  mod.rs
wallet-keystore/src/wallet/: mod.rs  prikey.rs
wallet-keystore/src/wallet/phrase/: builder.rs  mod.rs
wallet-keystore/src/wallet/prikey/: builder.rs  mod.rs
wallet-keystore/src/wallet/seed/: builder.rs  mod.rs
wallet-transport/: Cargo.toml
wallet-transport/src/: lib.rs  request_builder.rs
wallet-transport/src/client/: http_client.rs  mod.rs  rpc_client.rs
wallet-transport/src/client/mqtt_client/: mod.rs  sync.rs  test.rs
wallet-transport/src/client/oss_client/: mod.rs
wallet-transport/src/errors/: mod.rs
wallet-transport/src/types/: request.rs  response.rs
wallet-tree/: Cargo.toml
wallet-tree/src/: api.rs  error.rs  lib.rs  migration.rs  service.rs
wallet-tree/src/io/: legacy.rs  mod.rs  modern.rs
wallet-tree/src/layout/: hierarchical.rs  legacy.rs  meta.rs  mod.rs  (+3 more)
wallet-types/: Cargo.toml
wallet-types/src/: constant.rs  error.rs  lib.rs
wallet-utils/: Cargo.toml
wallet-utils/src/: address.rs  conversion.rs  file_func.rs  global_option.rs  hex_func.rs  lib.rs  parse_func.rs  ping.rs  serde_func.rs  unit.rs
wallet-utils/src/crypto/: cbc.rs
wallet-utils/src/error/: global_value.rs  http.rs  mod.rs  parse.rs  ping.rs  serde.rs
wallet-utils/src/global_value/: async_shared_state.rs  async_singleton.rs  mod.rs
wallet-utils/src/log/: file.rs  mod.rs
wallet-utils/src/sign/: mod.rs
(+17 files in other folders)
