[workspace]
members = [
    "wallet-chain-instance",
    "wallet-chain-interact",
    "wallet-core",
    "wallet-keystore",
    "wallet-transport",
    "wallet-tree",
    "wallet-types",
    "wallet-utils",
]

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

[patch.crates-io.protobuf]
git = "https://github.com/stepancheg/rust-protobuf/"
rev = "34680a41039a9e108d927b6d8d6647277589c912"

[patch.crates-io.libc]
git = "https://github.com/rust-lang/libc.git"
rev = "dad00cb00e92baa7e28a542eb94bc2a78762f583"


[workspace.dependencies]
wallet-chain-interact = { version = "0.1.0", default-features = false, path = "wallet-chain-interact" }
wallet-chain-instance = { version = "0.1.0", default-features = false, path = "wallet-chain-instance" }
wallet-core = { version = "0.1.0", default-features = false, path = "wallet-core" }
wallet-transport = { version = "0.1.0", default-features = false, path = "wallet-transport" }
wallet-tree = { version = "0.1.0", default-features = false, path = "wallet-tree" }
wallet-keystore = { version = "0.1.0", default-features = false, path = "wallet-keystore" }
wallet-utils = { version = "0.1.0", default-features = false, path = "wallet-utils" }
wallet-types = { version = "0.1.0", default-features = false, path = "wallet-types" }

litecoin = { git = "http://git.nexus58.com/recharge/server/plugin/rust-litecoin.git", package = "bitcoin", branch = "master" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# time
chrono = { version = "0.4", features = ["serde"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.31"
tracing-appender = "0.2.1"
tracing-error = "0.2.0"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
bincode = "1.3.3"
toml = "0.8.19"
serde_yaml = "0.9"

thiserror = "1"

sha2 = "0.10.1"
sha3 = "0.10.0"
bs58 = "0.4"
base64 = "0.22.1"
hmac = "0.12.0"

# http
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
    "gzip",
    "json",
] }
http = "1.1.0"
rumqttc = { version = "0.24.0", features = ["websocket", "url"] }

alloy = { git = "https://github.com/alloy-rs/alloy", default-features = false, features = [
    "sol-types",
    "rpc-types",
    "network",
    "signers",
    "signer-keystore",
], rev = "ea5eb7d504a1f4eb6c9937af7913577f78fee121" }

bitcoin = { version = "0.32.2", features = [
    "rand-std",
    "serde",
], default-features = false }
solana-sdk = "=2.0.0"

bech32 = "0.11.0"
once_cell = { version = "1", default-features = false }
rust_decimal = { version = "1.35.0", features = ["maths"] }
libsecp256k1 = { version = "0.7.1" }

# oss
url = { version = "^2" }

percent-encoding = "2.3.1"
ctr = "0.9.2"
aes = "0.8"
ecb = "0.1.2"
block-modes = "0.8"
block-padding = "0.2"
digest = "0.10.0"
hex = "0.4"
pbkdf2 = { version = "0.11", default-features = false }
scrypt = { version = "0.10.0", default-features = false }
cbc = "0.1"
md5 = "0.7.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
coins-bip39 = "0.8.7"
# coins-bip39 = { path = "../coins/crates/bip39" }
coins-bip32 = "0.8.7"
# coins-bip32 = { path = "../coins/crates/bip32" }


rand = "0.8.5"

# async
futures-util = "0.3"
async-trait = "0.1.80"


[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "thin"
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.test]
codegen-units = 16
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
