[package]
name = "wallet-chain-instance"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
wallet-core = { workspace = true }
wallet-utils = { workspace = true }
wallet-types = { workspace = true }

alloy = { workspace = true }

anychain-core = "0.1.6"
anychain-tron = "0.2.3"
solana-sdk = { workspace = true }
bitcoin = { workspace = true }
litecoin = { workspace = true }
dogcoin = { workspace = true }

libsecp256k1 = { workspace = true }
secp256k1 = { version = "0.29" }
ed25519-dalek = { workspace = true }

tracing = { workspace = true }

hex = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
sha3 = { workspace = true }
bs58 = { workspace = true }
bech32 = { workspace = true }

coins-bip32 = { workspace = true }
coins-bip39 = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

ripemd160 = { workspace = true }
hdpath = "0.6.3"

sui-sdk = { workspace = true }
sui-crypto = { workspace = true }
blake2 = { workspace = true }
generic-array = { workspace = true }
typenum = { workspace = true }
base64 = { workspace = true }
