[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror.workspace = true

wallet-types = { workspace = true }
solana-sdk = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

coins-bip32 = { workspace = true }
coins-bip39 = { workspace = true }
rand = { workspace = true }
pbkdf2 = { workspace = true }
hmac.workspace = true
