# cargo-features = ["edition2024"]
[package]
name = "wallet-transport"
version = "0.1.0"
edition = "2024"

[features]
debug-print = []
accept_invalid_certs = []

[dependencies]
wallet-utils = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest = { workspace = true }
rumqttc = { workspace = true }
tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# jsonwebtoken = "9.3.0"
hmac = { version = "^0.12" }
base64 = { version = "^0.22" }
chrono = { version = "^0.4" }
urlencoding = "2.1.3"
sha1 = "0.10.6"

regex = { workspace = true }

[dev-dependencies]
dotenv = "0.15.0"
