# cargo-features = ["edition2024"]
[package]
name = "wallet-utils"
version = "0.1.0"
edition = "2024"


[dependencies]
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# log
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }

sysinfo = "0.32"

# serde
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }

# sha2 
sha2 = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
md5 = { workspace = true }
bech32 = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
bs58 = { workspace = true }
aes = { workspace = true }
ecb = { workspace = true }
cbc = { workspace = true }
bcs = { workspace = true }

libsecp256k1 = "0.6"

alloy = { workspace = true }
solana-sdk = { workspace = true }
sui-types = { workspace = true }
# sui_types = { workspace = true }

rust_decimal = { workspace = true }
percent-encoding = { workspace = true }

http = { workspace = true }
reqwest = { workspace = true }

once_cell = { workspace = true }

pbkdf2 = { version = "0.12", default-features = false }

# icmp
surge-ping = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
